ingress-resources__(HTTPs)/1. app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: sapp1.ahmedokila.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port:
                  number: 80
    - host: sapp2.ahmedokila.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-clusterip-service
                port:
                  number: 80
  tls:
    - hosts:
        - sapp1.ahmedokila.com
      secretName: sapp1-ahmedokila-secret
    - hosts:
        - sapp2.ahmedokila.com
      secretName: sapp2-ahmedokila-secret
