ingress-resources__(HTTPs)/3. vault_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress-ssl
  namespace: vault
  annotations:
    alb.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: vault.ahmedokila.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: vault-ui
                port:
                  number: 8200
  tls:
    - hosts:
        - vault.ahmedokila.com
      secretName: vault-ahmedokila-secret
